Added '/admin/view-users.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-users.html
+++ b/BeginnersPad v2/admin/view-users.html
@@ -67,8 +67,8 @@
         <div class="nav-drawer-category">
             <p>Users</p>
             <ul>
-                <li><a href="/admin/view-users.html">View all</a></li>
-                <li class="selected"><a href="/admin/manage-users.html">Manage</a></li>
+                <li class="selected"><a href="/admin/view-users.html">View all</a></li>
+                <li><a href="/admin/manage-users.html">Manage</a></li>
                 <li><a href="/admin/manage-users-logs.html">Management log</a></li>
             </ul>
         </div>
@@ -108,6 +108,8 @@
         </div>
     </div>
 
+    <h3 class="section-title">Users</h3>
+
     <!-- Search bar -->
     <section id="search-bar">
         <div class="container">
@@ -122,34 +124,8 @@
         </div>
     </section>
 
-    <section class="section-users" id="sectionManageUsers">
+    <section class="section-users">
         <div class="container">
-            <div class="top-buttons">
-                <div class="btn-grp horizontal">
-                    <button class="selected">All</button>
-                    <button>Beginners</button>
-                    <button>Listers</button>
-                    <button>Admins</button>
-                    <button>Log</button>
-                    <button>Stats</button>
-                </div>
-                <div class="btn-grp vertical">
-                    <button class="selected">All</button>
-                    <button>Beginners</button>
-                    <button>Listers</button>
-                    <button>Admins</button>
-                    <button>Log</button>
-                    <button>Stats</button>
-                </div>
-            </div>
-            <div class="container-btn-dropdown">
-                <select class="btn-dropdown" name="listing_sort" id="listing_sort">
-                    <option value="" selected>Sort by newest</option>
-                    <option value="">Sort by oldest</option>
-                    <option value="">Sort by rating</option>
-                    <option value="">Sort by user type</option>
-                </select>
-            </div>
             <div class="cards">
                 <div class="profile primary">
                     <div class="card-user">
