Added links to user cards in '/admin/manage-users.html' and '/admin/view-users.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/view-users.html
+++ b/BeginnersPad v2/admin/view-users.html
@@ -129,100 +129,114 @@
             <div class="cards">
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>lister</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>lister</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>beginner</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>beginner</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>beginner</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>beginner</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>rep</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>rep</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>rep</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>rep</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>lister</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>lister</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="profile primary">
                     <div class="card-user">
-                        <h4 class="title">User profile</h4>
-                        <div class="details">
-                            <img src="/images/avatar.png" alt="">
-                            <div class="text">
-                                <h3 class="name">Name</h3>
-                                <h4 class="username">username</h4>
-                                <p class="account">User type: <span>beginner</span></p>
-                                <p class="time">Registered on: <span>01-01-2021</span></p>
+                        <a href="/admin/view-user.html">
+                            <h4 class="title">User profile</h4>
+                            <div class="details">
+                                <img src="/images/avatar.png" alt="">
+                                <div class="text">
+                                    <h3 class="name">Name</h3>
+                                    <h4 class="username">username</h4>
+                                    <p class="account">User type: <span>beginner</span></p>
+                                    <p class="time">Registered on: <span>01-01-2021</span></p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
