Added '.fab-container' and '.fab' to '/styles/utilities.css' and implementation in '/admin/manage-users.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-users.html
+++ b/BeginnersPad v2/admin/manage-users.html
@@ -108,6 +108,10 @@
         </div>
     </div>
 
+    <div class="fab-container">
+        <button class="fab btn-primary"><i class="fas fa-plus"></i> Add user</button>
+    </div>
+
     <!-- Search bar -->
     <section id="search-bar">
         <div class="container">
