Added styling for '/admin/manage-zones.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zones.html
+++ b/BeginnersPad v2/admin/manage-zones.html
@@ -112,11 +112,12 @@
         <button class="fab btn-primary"><i class="fas fa-plus"></i> Add zone</button>
     </div>
 
-    <h3 class="section-title">Zones</h3>
-
     <div class="section-showcase-map">
+        <!-- https://developers.google.com/maps/documentation/javascript/examples/polygon-simple#maps_polygon_simple-css -->
         <div id="map"></div>
     </div>
+
+    <h3 class="section-title">Zones</h3>
 
     <!-- Search bar -->
     <section id="search-bar">
@@ -145,68 +146,80 @@
             <div class="cards">
                 <div class="card-generic">
                     <a href="/admin/view-zone.html">
-                        <h4>Zone name</h4>
-                        <p>County: <span>county name</span></p>
-                        <p>State: <span>state name</span></p>
-                        <p>Coordinates: <span>0.000,0.000</span></p>
-                        <p>Radius: <span>0 km</span></p>
-                        <p>Timezone: <span>GMT +3</span></p>
-                        <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        <div class="text">
+                            <h4>Zone name (ID <span>000</span>)</h4>
+                            <p>County: <span>county name</span></p>
+                            <p>State: <span>state name</span></p>
+                            <p>Coordinates: <span>0.000, 0.000</span></p>
+                            <p>Radius: <span>0 km</span></p>
+                            <p>Timezone: <span>GMT +3</span></p>
+                            <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-generic">
                     <a href="/admin/view-zone.html">
-                        <h4>Zone name</h4>
-                        <p>County: <span>county name</span></p>
-                        <p>State: <span>state name</span></p>
-                        <p>Coordinates: <span>0.000,0.000</span></p>
-                        <p>Radius: <span>0 km</span></p>
-                        <p>Timezone: <span>GMT +3</span></p>
-                        <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        <div class="text">
+                            <h4>Zone name (ID <span>000</span>)</h4>
+                            <p>County: <span>county name</span></p>
+                            <p>State: <span>state name</span></p>
+                            <p>Coordinates: <span>0.000, 0.000</span></p>
+                            <p>Radius: <span>0 km</span></p>
+                            <p>Timezone: <span>GMT +3</span></p>
+                            <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-generic">
                     <a href="/admin/view-zone.html">
-                        <h4>Zone name</h4>
-                        <p>County: <span>county name</span></p>
-                        <p>State: <span>state name</span></p>
-                        <p>Coordinates: <span>0.000,0.000</span></p>
-                        <p>Radius: <span>0 km</span></p>
-                        <p>Timezone: <span>GMT +3</span></p>
-                        <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        <div class="text">
+                            <h4>Zone name (ID <span>000</span>)</h4>
+                            <p>County: <span>county name</span></p>
+                            <p>State: <span>state name</span></p>
+                            <p>Coordinates: <span>0.000, 0.000</span></p>
+                            <p>Radius: <span>0 km</span></p>
+                            <p>Timezone: <span>GMT +3</span></p>
+                            <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-generic">
                     <a href="/admin/view-zone.html">
-                        <h4>Zone name</h4>
-                        <p>County: <span>county name</span></p>
-                        <p>State: <span>state name</span></p>
-                        <p>Coordinates: <span>0.000,0.000</span></p>
-                        <p>Radius: <span>0 km</span></p>
-                        <p>Timezone: <span>GMT +3</span></p>
-                        <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        <div class="text">
+                            <h4>Zone name (ID <span>000</span>)</h4>
+                            <p>County: <span>county name</span></p>
+                            <p>State: <span>state name</span></p>
+                            <p>Coordinates: <span>0.000, 0.000</span></p>
+                            <p>Radius: <span>0 km</span></p>
+                            <p>Timezone: <span>GMT +3</span></p>
+                            <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-generic">
                     <a href="/admin/view-zone.html">
-                        <h4>Zone name</h4>
-                        <p>County: <span>county name</span></p>
-                        <p>State: <span>state name</span></p>
-                        <p>Coordinates: <span>0.000,0.000</span></p>
-                        <p>Radius: <span>0 km</span></p>
-                        <p>Timezone: <span>GMT +3</span></p>
-                        <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        <div class="text">
+                            <h4>Zone name (ID <span>000</span>)</h4>
+                            <p>County: <span>county name</span></p>
+                            <p>State: <span>state name</span></p>
+                            <p>Coordinates: <span>0.000, 0.000</span></p>
+                            <p>Radius: <span>0 km</span></p>
+                            <p>Timezone: <span>GMT +3</span></p>
+                            <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        </div>
                     </a>
                 </div>
                 <div class="card-generic">
                     <a href="/admin/view-zone.html">
-                        <h4>Zone name</h4>
-                        <p>County: <span>county name</span></p>
-                        <p>State: <span>state name</span></p>
-                        <p>Coordinates: <span>0.000,0.000</span></p>
-                        <p>Radius: <span>0 km</span></p>
-                        <p>Timezone: <span>GMT +3</span></p>
-                        <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        <div class="text">
+                            <h4>Zone name (ID <span>000</span>)</h4>
+                            <p>County: <span>county name</span></p>
+                            <p>State: <span>state name</span></p>
+                            <p>Coordinates: <span>0.000, 0.000</span></p>
+                            <p>Radius: <span>0 km</span></p>
+                            <p>Timezone: <span>GMT +3</span></p>
+                            <p class="txt-sm">Added on: <span>01-01-2021 00:00:00</span></p>
+                        </div>
                     </a>
                 </div>
             </div>
