--- a/BeginnersPad v2/admin/manage-zones.html
+++ b/BeginnersPad v2/admin/manage-zones.html
@@ -145,7 +145,7 @@
             </div>
             <div class="cards">
                 <div class="card-generic">
-                    <a href="/admin/view-zone.html">
+                    <a href="/admin/manage-zone.html">
                         <div class="text">
                             <h4>Zone name (ID <span>000</span>)</h4>
                             <p>County: <span>county name</span></p>
@@ -158,7 +158,7 @@
                     </a>
                 </div>
                 <div class="card-generic">
-                    <a href="/admin/view-zone.html">
+                    <a href="/admin/manage-zone.html">
                         <div class="text">
                             <h4>Zone name (ID <span>000</span>)</h4>
                             <p>County: <span>county name</span></p>
@@ -171,7 +171,7 @@
                     </a>
                 </div>
                 <div class="card-generic">
-                    <a href="/admin/view-zone.html">
+                    <a href="/admin/manage-zone.html">
                         <div class="text">
                             <h4>Zone name (ID <span>000</span>)</h4>
                             <p>County: <span>county name</span></p>
@@ -184,7 +184,7 @@
                     </a>
                 </div>
                 <div class="card-generic">
-                    <a href="/admin/view-zone.html">
+                    <a href="/admin/manage-zone.html">
                         <div class="text">
                             <h4>Zone name (ID <span>000</span>)</h4>
                             <p>County: <span>county name</span></p>
@@ -197,7 +197,7 @@
                     </a>
                 </div>
                 <div class="card-generic">
-                    <a href="/admin/view-zone.html">
+                    <a href="/admin/manage-zone.html">
                         <div class="text">
                             <h4>Zone name (ID <span>000</span>)</h4>
                             <p>County: <span>county name</span></p>
@@ -210,7 +210,7 @@
                     </a>
                 </div>
                 <div class="card-generic">
-                    <a href="/admin/view-zone.html">
+                    <a href="/admin/manage-zone.html">
                         <div class="text">
                             <h4>Zone name (ID <span>000</span>)</h4>
                             <p>County: <span>county name</span></p>
