Added styling for '/admin/manage-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -121,21 +121,26 @@
                     <div class="zone-map">
                         <div id="map"></div>
                     </div>
-                    <div class="zone-details">
-                        <h3 class="name">Zone name (ID <span>000</span>)</h3>
-                        <p class="country">County: <span> KE</span></p>
-                        <p class="county">County: <span>county name</span></p>
-                        <p class="radius">Zone radius: <span>0 km</span></p>
-                        <p class="timezone">Timezone: <span>GMT +3</span></p>
-                        <p class="timestamp">Added on: <span>01-01-2021 00:00:00</span></p>
-                        <p class="subzones">Sub-zones: <span>0</span></p>
-                        <p class="listings">Listings: <span>0</span></p>
+                    <div class="panel-item bordered">
+                        <h3>Zone details</h3>
+                        <div class="data">
+                            <ul>
+                                <li>Zone name (ID <span>000</span>)</li>
+                                <li>County: <span> KE</span></li>
+                                <li>County: <span>county name</span></li>
+                                <li>Zone radius: <span>0 km</span></li>
+                                <li>Timezone: <span>GMT +3</span></li>
+                                <li>Added on: <span>01-01-2021 00:00:00</span></li>
+                                <li>Sub-zones: <span>0</span></li>
+                                <li>Listings: <span>0</span></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="section-more">
                         <a href="/admin/listing-applications.html">View listings in this zone <i class="fas fa-chevron-right"></i></a>
                     </div>
                     <div class="charts">
-                        <h3>Relative occupation chart</h3>
+                        <h3>Relative occupancy chart</h3>
                         <div class="chart" style="height: 300px;width: 250px;">
                             <canvas id="chartDashListingsBeginner" width="250" height="300"></canvas>
                         </div>
@@ -154,9 +159,8 @@
                         <div class="card-generic">
                             <a href="/admin/manage-zone.html">
                                 <div class="text">
-                                    <h4>Zone name (ID <span>000</span>)</h4>
-                                    <p>County: <span>county name</span></p>
-                                    <p>State: <span>state name</span></p>
+                                    <h4>Sub-zone name (ID <span>000</span>)</h4>
+                                    <p>Role/nature: <span>role</span></p>
                                     <p>Coordinates: <span>0.000, 0.000</span></p>
                                     <p>Radius: <span>0 km</span></p>
                                     <p>Timezone: <span>GMT +3</span></p>
@@ -167,9 +171,8 @@
                         <div class="card-generic">
                             <a href="/admin/manage-zone.html">
                                 <div class="text">
-                                    <h4>Zone name (ID <span>000</span>)</h4>
-                                    <p>County: <span>county name</span></p>
-                                    <p>State: <span>state name</span></p>
+                                    <h4>Sub-zone name (ID <span>000</span>)</h4>
+                                    <p>Role/nature: <span>role</span></p>
                                     <p>Coordinates: <span>0.000, 0.000</span></p>
                                     <p>Radius: <span>0 km</span></p>
                                     <p>Timezone: <span>GMT +3</span></p>
@@ -180,9 +183,8 @@
                         <div class="card-generic">
                             <a href="/admin/manage-zone.html">
                                 <div class="text">
-                                    <h4>Zone name (ID <span>000</span>)</h4>
-                                    <p>County: <span>county name</span></p>
-                                    <p>State: <span>state name</span></p>
+                                    <h4>Sub-zone name (ID <span>000</span>)</h4>
+                                    <p>Role/nature: <span>role</span></p>
                                     <p>Coordinates: <span>0.000, 0.000</span></p>
                                     <p>Radius: <span>0 km</span></p>
                                     <p>Timezone: <span>GMT +3</span></p>
@@ -193,9 +195,8 @@
                         <div class="card-generic">
                             <a href="/admin/manage-zone.html">
                                 <div class="text">
-                                    <h4>Zone name (ID <span>000</span>)</h4>
-                                    <p>County: <span>county name</span></p>
-                                    <p>State: <span>state name</span></p>
+                                    <h4>Sub-zone name (ID <span>000</span>)</h4>
+                                    <p>Role/nature: <span>role</span></p>
                                     <p>Coordinates: <span>0.000, 0.000</span></p>
                                     <p>Radius: <span>0 km</span></p>
                                     <p>Timezone: <span>GMT +3</span></p>
@@ -206,9 +207,8 @@
                         <div class="card-generic">
                             <a href="/admin/manage-zone.html">
                                 <div class="text">
-                                    <h4>Zone name (ID <span>000</span>)</h4>
-                                    <p>County: <span>county name</span></p>
-                                    <p>State: <span>state name</span></p>
+                                    <h4>Sub-zone name (ID <span>000</span>)</h4>
+                                    <p>Role/nature: <span>role</span></p>
                                     <p>Coordinates: <span>0.000, 0.000</span></p>
                                     <p>Radius: <span>0 km</span></p>
                                     <p>Timezone: <span>GMT +3</span></p>
@@ -219,9 +219,8 @@
                         <div class="card-generic">
                             <a href="/admin/manage-zone.html">
                                 <div class="text">
-                                    <h4>Zone name (ID <span>000</span>)</h4>
-                                    <p>County: <span>county name</span></p>
-                                    <p>State: <span>state name</span></p>
+                                    <h4>Sub-zone name (ID <span>000</span>)</h4>
+                                    <p>Role/nature: <span>role</span></p>
                                     <p>Coordinates: <span>0.000, 0.000</span></p>
                                     <p>Radius: <span>0 km</span></p>
                                     <p>Timezone: <span>GMT +3</span></p>
