Added media queries for '/admin/manage-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -75,7 +75,7 @@
         <div class="nav-drawer-category">
             <p>Zones</p>
             <ul>
-                <li class="selected"><a href="/admin/manage-zones.html">Manage</a></li>
+                <li><a href="/admin/manage-zones.html">Manage</a></li>
                 <li><a href="/admin/manage-listings-logs.html">Management log</a></li>
             </ul>
         </div>
@@ -114,7 +114,7 @@
 
     <h3 class="section-title">Zone name</h3>
 
-    <section class="section-zones">
+    <section class="section-zones" id="sectionViewZone">
         <div class="container">
             <div class="panel-grp">
                 <div class="panel">
