Added 'edit' button to 'zone-details' element in '/admin/manage-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -122,7 +122,14 @@
                         <div id="map"></div>
                     </div>
                     <div class="panel-item bordered">
-                        <h3>Zone details</h3>
+                        <div class="title-grp">
+                            <h3>Zone details</h3>
+                            <div class="info-actions">
+                                <a href="#">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                            </div>
+                        </div>
                         <div class="data">
                             <ul>
                                 <li>Zone name (ID <span>000</span>)</li>
