Changed all references of '/admin/manage-zone.html' in '/admin/manage-zone.html' to '/admin/manage-sub-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -164,7 +164,7 @@
                     </div>
                     <div class="cards">
                         <div class="card-generic">
-                            <a href="/admin/manage-zone.html">
+                            <a href="/admin/manage-sub-zone.html">
                                 <div class="text">
                                     <h4>Sub-zone name (ID <span>000</span>)</h4>
                                     <p>Role/nature: <span>role</span></p>
@@ -176,7 +176,7 @@
                             </a>
                         </div>
                         <div class="card-generic">
-                            <a href="/admin/manage-zone.html">
+                            <a href="/admin/manage-sub-zone.html">
                                 <div class="text">
                                     <h4>Sub-zone name (ID <span>000</span>)</h4>
                                     <p>Role/nature: <span>role</span></p>
@@ -188,7 +188,7 @@
                             </a>
                         </div>
                         <div class="card-generic">
-                            <a href="/admin/manage-zone.html">
+                            <a href="/admin/manage-sub-zone.html">
                                 <div class="text">
                                     <h4>Sub-zone name (ID <span>000</span>)</h4>
                                     <p>Role/nature: <span>role</span></p>
@@ -200,7 +200,7 @@
                             </a>
                         </div>
                         <div class="card-generic">
-                            <a href="/admin/manage-zone.html">
+                            <a href="/admin/manage-sub-zone.html">
                                 <div class="text">
                                     <h4>Sub-zone name (ID <span>000</span>)</h4>
                                     <p>Role/nature: <span>role</span></p>
@@ -212,7 +212,7 @@
                             </a>
                         </div>
                         <div class="card-generic">
-                            <a href="/admin/manage-zone.html">
+                            <a href="/admin/manage-sub-zone.html">
                                 <div class="text">
                                     <h4>Sub-zone name (ID <span>000</span>)</h4>
                                     <p>Role/nature: <span>role</span></p>
@@ -224,7 +224,7 @@
                             </a>
                         </div>
                         <div class="card-generic">
-                            <a href="/admin/manage-zone.html">
+                            <a href="/admin/manage-sub-zone.html">
                                 <div class="text">
                                     <h4>Sub-zone name (ID <span>000</span>)</h4>
                                     <p>Role/nature: <span>role</span></p>
