Added HTML markup to '/admin/manage-zub-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -133,7 +133,7 @@
                         <div class="data">
                             <ul>
                                 <li>Zone name (ID <span>000</span>)</li>
-                                <li>County: <span> KE</span></li>
+                                <li>Country: <span> KE</span></li>
                                 <li>County: <span>county name</span></li>
                                 <li>Zone radius: <span>0 km</span></li>
                                 <li>Timezone: <span>GMT +3</span></li>
