Added media queries for 'max-width:941px'  for '/admin/manage-sub-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-sub-zone.html
+++ b/BeginnersPad v2/admin/manage-sub-zone.html
@@ -153,7 +153,7 @@
                 <div class="panel">
                     <div class="listing-units-list">
                         <h3>Listings in this sub-zone</h3>
-                        <div class="listing-units-grp">
+                        <div class="listing-units-grp" id="sectionZoneListingUnits">
                             <div class="card-sm card-2">
                                 <a href="/admin/manage-listing.html">
                                     <div class="thumb"></div>
