Added 'coordinates' entry to details section of '/admin/manage-zone.html' and '/admin/manage-sub-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -135,6 +135,7 @@
                                 <li>Zone name (ID <span>000</span>)</li>
                                 <li>Country: <span> KE</span></li>
                                 <li>County: <span>county name</span></li>
+                                <li>Coordinates: <span>0.000, 0.000</span></li>
                                 <li>Zone radius: <span>0 km</span></li>
                                 <li>Timezone: <span>GMT +3</span></li>
                                 <li>Added on: <span>01-01-2021 00:00:00</span></li>
