--- a/BeginnersPad v2/admin/manage-sub-zone.html
+++ b/BeginnersPad v2/admin/manage-sub-zone.html
@@ -133,6 +133,7 @@
                                 <li>County: <span>county name</span></li>
                                 <li>Zone: <span>zone name (ID 000)</span></li>
                                 <li>Role/nature: <span>role</span></li>
+                                <li>Coordinates: <span>0.000, 0.000</span></li>
                                 <li>Area radius: <span>0 km</span></li>
                                 <li>Timezone: <span>GMT +3</span></li>
                                 <li>Added on: <span>01-01-2021 00:00:00</span></li>
