--- a/BeginnersPad v2/admin/manage-zone.html
+++ b/BeginnersPad v2/admin/manage-zone.html
@@ -82,7 +82,7 @@
         <div class="nav-drawer-category">
             <p>Tags & topics</p>
             <ul>
-                <li><a href="view-topics.html">View topics</a></li>
+                <li><a href="/view-topics.html">View topics</a></li>
                 <li><a href="/admin/manage-topics.html">Manage topics</a></li>
                 <li><a href="/admin/manage-topics-logs.html">Topic management log</a></li>
                 <li><a href="/admin/manage-tags.html">Manage tags</a></li>
@@ -160,7 +160,7 @@
                             <option value="" selected>Sort by newest</option>
                             <option value="">Sort by oldest</option>
                             <option value="">Sort by rating</option>
-                            <option value="">Sort by listing count</option>
+                            <option value="">Sort by popularity</option>
                         </select>
                     </div>
                     <div class="cards">
