--- a/BeginnersPad v2/admin/manage-listing-unit.html
+++ b/BeginnersPad v2/admin/manage-listing-unit.html
@@ -81,7 +81,7 @@
         <div class="nav-drawer-category">
             <p>Tags & topics</p>
             <ul>
-                <li><a href="view-topics.html">View topics</a></li>
+                <li><a href="/view-topics.html">View topics</a></li>
                 <li><a href="/admin/manage-topics.html">Manage topics</a></li>
                 <li><a href="/admin/manage-topics-logs.html">Topic management log</a></li>
                 <li><a href="/admin/manage-tags.html">Manage tags</a></li>
