--- a/BeginnersPad v2/admin/manage-zones-logs.html
+++ b/BeginnersPad v2/admin/manage-zones-logs.html
@@ -58,7 +58,7 @@
             <ul>
                 <li><a href="/view-listings.html">View all</a></li>
                 <li><a href="/admin/manage-listings.html">Manage</a></li>
-                <li class="selected"><a href="/admin/manage-listings-logs.html">Listing management log</a></li>
+                <li><a href="/admin/manage-listings-logs.html">Listing management log</a></li>
                 <li><a href="/admin/manage-listings-reviews.html">Manage reviews</a></li>
                 <li><a href="/admin/listing-applications.html">Applications</a></li>
                 <li><a href="/admin/listing-applications-logs.html">Application management log</a></li>
@@ -76,13 +76,13 @@
             <p>Zones</p>
             <ul>
                 <li><a href="/admin/manage-zones.html">Manage</a></li>
-                <li><a href="/admin/manage-zones-logs.html">Management log</a></li>
+                <li class="selected"><a href="/admin/manage-zones-logs.html">Management log</a></li>
             </ul>
         </div>
         <div class="nav-drawer-category">
             <p>Tags & topics</p>
             <ul>
-                <li><a href="view-topics.html">View topics</a></li>
+                <li><a href="/view-topics.html">View topics</a></li>
                 <li><a href="/admin/manage-topics.html">Manage topics</a></li>
                 <li><a href="/admin/manage-topics-logs.html">Topic management log</a></li>
                 <li><a href="/admin/manage-tags.html">Manage tags</a></li>
