--- a/BeginnersPad v2/admin/manage-topics.html
+++ b/BeginnersPad v2/admin/manage-topics.html
@@ -83,7 +83,7 @@
             <p>Tags & topics</p>
             <ul>
                 <li><a href="/view-topics.html">View topics</a></li>
-                <li><a href="/admin/manage-topics.html">Manage topics</a></li>
+                <li class="selected"><a href="/admin/manage-topics.html">Manage topics</a></li>
                 <li><a href="/admin/manage-topics-logs.html">Topic management log</a></li>
                 <li><a href="/admin/manage-tags.html">Manage tags</a></li>
                 <li><a href="/admin/manage-tags-logs.html">Tag management log</a></li>
